--- a/WorkshopSlides.Rmd
+++ b/WorkshopSlides.Rmd
@@ -92,10 +92,20 @@ staticplot
 ## Workshop aims
 
 - To use Shiny to make an interactive version of the plot
-  - Select / animate the year
-  - Identify a country by selecting it
-  - Show trajectories for all / selected country
-  
+    - Select / animate the year
+    - Identify a country by selecting it
+    - Show trajectories for all / selected country
+
+## Getting started
+
+Run the Docker container we will be using:
+
+```
+docker run -d --name rstudio -p 8787:8787 -p 3838:3838 \
+-v "$(pwd)/coursematerial:/home/rstudio/coursematerial" \
+-e USERID=ID  mawds/rstudio
+```
+And then connect to http://localhost:8787 using Chromium
 
 ## Deploying Shiny apps
 
