--- a/WorkshopSlides.Rmd
+++ b/WorkshopSlides.Rmd
@@ -210,14 +210,16 @@ server <- function(input, output) {
     - ~~Identify a country by selecting it~~
     - ~~Show "trajectory" for selected country~~
 
-- Add another widget to select continents, and modify your server function to filter the data so that only the selected continents are shown.
+- Add another widget to select continents <span style="color:red">continentUI</span>
+- Modify your server function to filter the data so that only the selected continents are shown.<span style="color:red">continent</span>
 
 ## Cutomising how our app looks
 
 - The `shinythemes` package lets us select readymade themes for our app
 - Can write our own css for more control
-- `shinythemes::themeSelector()` widget lets us interactively exeriment with themes
-- Use the option `theme = shinytheme("themename")` on your user interface function (`fluidPage`) in our example
+- `shinythemes::themeSelector()` widget lets us interactively exeriment with themes <span style="color:red">themeselector</span>
+- Use the option `theme = shinytheme("themename")` on your user interface function (`fluidPage`) in our example <span style="color:red">changetheme</span>
+
     
 ## App layout
 
