--- a/WorkshopSlides.Rmd
+++ b/WorkshopSlides.Rmd
@@ -94,16 +94,11 @@ gapminder %>%
 
 ## Getting started
 
-* Run the Docker container we will be using:
+* Run rstudio:
 
 ```
-docker run -d --name rstudio -p 8787:8787 -p 3838:3838 \
--v "$(pwd)/coursematerial:/home/rstudio/coursematerial" \
--e USERID=ID  mawds/rstudio
+rstudio
 ```
-* Connect to http://localhost:8787 using Chromium. 
-
-* username: rstudio password: rstudio
 
 * `coursematerial` contains the data and plotting functions we will use.
 
